# FasterTransformer

./: CMakeLists.txt
src/fastertransformer/kernels/: CMakeLists.txt  WordEmbLookup.cu  WordEmbLookup.h  activation_fp8_kernels.cu  disentangled_attention_kernels.cu  disentangled_attention_kernels.h  layernorm_fp8_kernels.cu  unfused_attention_kernels.cu  unfused_attention_kernels.h
src/fastertransformer/layers/attention_layers/: CMakeLists.txt  DecoderCrossAttentionLayer.cu  DecoderCrossAttentionLayer.h  DecoderCrossAttentionLayerOpt.cu  DecoderCrossAttentionLayerOpt.h  DisentangledAttentionLayer.cc  TensorParallelZcodeDecoderCrossAttentionLayer.cc  TensorParallelZcodeDecoderCrossAttentionLayer.h  TensorParallelZcodeDecoderDisentangledAttentionLayer.cc  TensorParallelZcodeDecoderDisentangledAttentionLayer.h  TensorParallelZcodeEncoderDisentangledAttentionLayer.cc  TensorParallelZcodeEncoderDisentangledAttentionLayer.h  ZcodeDecoderCrossAttentionLayer.cu  ZcodeDecoderCrossAttentionLayer.h  ZcodeDecoderDisentangledAttentionLayer.cc  ZcodeDecoderDisentangledAttentionLayer.h  ZcodeEncoderDisentangledAttentionLayer.cc  ZcodeEncoderDisentangledAttentionLayer.h  ZppEncoderAttentionLayer.cc  ZppEncoderAttentionLayer.h
src/fastertransformer/models/: CMakeLists.txt
src/fastertransformer/models/zcode_decoder/: CMakeLists.txt  Deberta.cc  Deberta.h  DebertaLayerWeight.cc  DebertaLayerWeight.h  DebertaWeight.cc  DebertaWeight.h
src/fastertransformer/models/zcode_decoding/: CMakeLists.txt  DebertaDecoding.cc  (+6 more)
src/fastertransformer/models/zcodepp/: CMakeLists.txt  ZppEncoder.cc  ZppEncoder.h  ZppEncoderLayerWeight.cc  ZppEncoderLayerWeight.h  ZppEncoderWeight.cc  ZppEncoderWeight.h
src/fastertransformer/th_op/: CMakeLists.txt
src/fastertransformer/utils/: cuda_fp8_utils.cu  cuda_type_utils.cuh
(+21 files in other folders)
